--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "xai-sdk>=1.5.0",
     "markdown",
+    "pydantic",
+    "click>=8.3.1",
+    "jinja2>=3.1.6",
 ]
